# Gladiators_game

./: CMakeLists.txt  README.md  main.cpp
headers/: Canvas.hpp  Client.hpp  ConnectionScreen.hpp  LobbyConnectionScreen.hpp  LobbyCreatorScreen.hpp  LobbyScreen.hpp  MainWindow.hpp  MenuScreen.hpp  NetworkManager.hpp  PaintingScreen.hpp  Server.hpp  VotingScreen.hpp
old/: NetworkManager.cpp
res/: Titles.json
src/: Canvas.cpp  Client.cpp  ConnectionScreen.cpp  LobbyConnectionScreen.cpp  LobbyCreatorScreen.cpp  LobbyScreen.cpp  MainWindow.cpp  MainWindow_new.cpp  MenuScreen.cpp  NetworkManager.cpp  PaintingScreen.cpp  Server.cpp  VotingScreen.cpp
